--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -10,7 +10,7 @@ RUN pnpm run build
 FROM nginx:latest
 
 COPY --from=build /app/build /usr/share/nginx/html
-COPY nginx/default.conf /etc/nginx/nginx.conf
+COPY nginx/default.conf ./nginx:/etc/nginx/conf.d/default.conf
 
 EXPOSE 80/tcp
 
