--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -1,7 +1,12 @@
 FROM node:18 as build
 
-WORKDIR /app
 RUN yarn global add pnpm
+
+WORKDIR /app
+
+ARG REACT_APP_API_URL
+RUN echo "REACT_APP_API_URL=${REACT_APP_API_URL}" > .env
+
 COPY package*.json ./
 RUN pnpm i
 COPY . .
