--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -14,7 +14,7 @@ RUN pnpm run build
 
 FROM nginx:latest
 
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/build /app/build
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80/tcp
