--- a/.github/workflows/azure-container-webapp.yml
+++ b/.github/workflows/azure-container-webapp.yml
@@ -64,8 +64,7 @@ jobs:
           push: true
           tags: ghcr.io/${{ env.REPO }}:${{ github.sha }}
           file: ./Dockerfile-prod
-          build-args: |
-            "REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}"
+          build-args: REACT_APP_API_URL=${{ secrets.REACT_APP_API_URL }}
 
   deploy:
     permissions:
