Update Azure prod config !

--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -6,6 +6,7 @@ WORKDIR /app
 COPY . .
 
 ARG REACT_APP_API_URL
+ENV REACT_APP_API_URL=REACT_APP_API_URL
 RUN echo "REACT_APP_API_URL=${REACT_APP_API_URL}" > .env
 
 RUN pnpm i
